--- a/views/teetimes/create.hbs
+++ b/views/teetimes/create.hbs
@@ -1,18 +1,23 @@
-<h1>Create New Golfer</h1>
+<h1>Create new Teetime</h1>
 
 <form method = "post">
     <fieldset class = "form-group">
         <label for = "golferName" class="control-lavel col-2">Golfer Name</label>
-        <input class = "form-control" name="golferName" id="golferName" required/>
+        <input type = "text" class = "form-control" name="golferName" id="golferName" required/>
 
         <label for = "holes" class="control-lavel col-2">Holes</label>
-        <input class = "form-control" name="holes" id="holes" required/>
+        <input class = "form-control" name="holes" id="holes" list = "l1" required pattern = "9 | 18"/>
+        <datalist id = "l1">
+            <option>9</option>
+            <option>18</option>
+        </datalist>
 
         <label for = "cartRequired" class="control-lavel col-2">Cart Required</label>
-        <input class = "form-control" name="cartRequired" id="cartRequired" required/>
+        <input type = "radio" class = "form-control" name="cartRequired" id="cartRequired1" value = "True" required/> <label for ="cartRequired1">True</label>
+        <input type = "radio" class = "form-control" name="cartRequired" id="cartRequired2" value = "False" required/> <label for ="cartRequired2">False</label>
 
         <label for = "date" class="control-lavel col-2">Date</label>
-        <input class = "form-control" name="date" id="date" required/>
+        <input type = "text" class = "form-control" name="date" id="date" required/>
 
         <label for = "greenFee" class="control-lavel col-2">Green Fee</label>
         <input class = "form-control" name="greenFee" id="greenFee" required/>
