Fiddled with wording.

--- a/views/teetimes/index.hbs
+++ b/views/teetimes/index.hbs
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
-<p>Welcome to the Teetimes page. This displays the stats for all the golfers, showing the times for their tees.</p>
+<p>Welcome to the Teetimes page. This is where you can create your request for a teetime, including what you need for it.</p>
+
 <a href="/teetimes/create">Add a New Teetime.</a>
 
 <ul>
