Fiddled with wording.

--- a/views/teetimes/create.hbs
+++ b/views/teetimes/create.hbs
@@ -8,11 +8,11 @@
         <label for = "holes" class="control-lavel col-2">Holes</label>
         <input class = "form-control" name="holes" id="holes" list = "l1" required pattern = "9 | 18"/>
         <datalist id = "l1">
-            <option>9</option>
-            <option>18</option>
+            <option>9 - $25</option>
+            <option>18 - $45</option>
         </datalist>
 
-        <label for = "cartRequired" class="control-lavel col-2">Cart Required</label>
+        <label for = "cartRequired" class="control-lavel col-2">Cart Required - $15</label>
         <input type = "radio" class = "form-control" name="cartRequired" id="cartRequired1" value = "True" required/> <label for ="cartRequired1">True</label>
         <input type = "radio" class = "form-control" name="cartRequired" id="cartRequired2" value = "False" required/> <label for ="cartRequired2">False</label>
 
